c/examples/writing-a-c-compiler-tests/tests/chapter_9/invalid_types/extra_credit/compound_assign_function_lhs.c
int x(void);

int main(void) {
    x += 3;
    return 0;
}